tests/baselines/reference/parserGreaterThanTokenAmbiguity18.errors.txt
//// [tests/cases/conformance/parser/ecmascript5/Generics/parserGreaterThanTokenAmbiguity18.ts] ////

parserGreaterThanTokenAmbiguity18.ts(1,10): error TS1109: Expression expected.


==== parserGreaterThanTokenAmbiguity18.ts (1 errors) ====
    1 >>>/**/= 2;
             ~
!!! error TS1109: Expression expected.